# robo-data-text2sql

./: .gitignore  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  check_cache_logic_sanity.py  docker-compose.yml  env.test.example  pyproject.toml  rwis 스크립트.txt
app/: config.py  deps.py  main.py  smart_logger.py
app/core/: background_jobs.py  cache_postprocess.py  embedding.py  enum_cache_bootstrap.py  graph_search.py  llm_factory.py  neo4j_bootstrap.py  prompt.py  query_cache.py  sql_autocorrect_llm.py  sql_exec.py  sql_guard.py  sql_mindsdb_prepare.py  sql_transform.py  text2sql_runtime_repair.py  text2sql_runtime_repair_jobs.py  text2sql_table_vectorizer.py  text2sql_validity_bootstrap.py  text2sql_validity_jobs.py  text2sql_validity_mindsdb.py
app/ingest/: to_neo4j.py
app/models/: explain_cache.py  finding.py  neo4j_history.py
app/react/: agent.py  controller.py  conversation_capsule.py  enrich_react_metadata.py  llm_factory.py  rubric_judge.py  state.py  tool_result_metadata_merge.py
app/react/generators/: _repro_log.py  controller_repair_generator.py  controller_sql_candidates_generator.py  controller_triage_generator.py  explain_analysis_generator.py  hyde_schema_generator.py  hyde_schema_variant_generator.py  intent_extract_generator.py  light_disambiguation_queries_generator.py  (+8 more)
app/routers/: ask.py  cache.py  direct_sql.py  events.py  feedback.py  history.py  meta.py  react.py  schema_edit.py  security.py  vectorize.py  watch_agent.py
app/sanity_checks/: __init__.py  result.py  runner.py
frontend/: vite.config.ts
scripts/: init_schema.py
(+72 files in other folders)
